--- a/salim.html
+++ b/salim.html
@@ -3,6 +3,7 @@
 <html lang="en">
 
 <head>
+    <meta name="google-site-verification" content="P0uElXirmzAZoxUfNvdzyYQAm58UQlGk-OE3SA3MAqM" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio Website</title>
@@ -20,7 +21,7 @@
     </script>
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
-
+   
 </head>
 
 <body>
