formations responsive + all responsive

--- a/salim.html
+++ b/salim.html
@@ -85,26 +85,26 @@
                 <div class="card">
                     <div class="box">
                         <div class="text">bachelor's degree in mathematics</div>
-                        <pre><i class="fas fa-university"></i><h3 style="color: lightblue;">Mouloud mammeri university</h3></pre><br/>
-                        <pre><i class="far fa-calendar"></i><h3 style="color:lightblue;">2016/2017</h3></pre><br/>
-                        <pre><i class="fas fa-map-marker-alt"></i><h3 style="color: lightblue;">TiziOuzou - AlGERIA</h3></pre>
                     </div>
+                    <pre><i class="fas fa-university"></i><h3 style="color: lightblue;"><a target="_blank" href="" class="formationsLinks">Mouloud mammeri university</a></h3></pre><br/>
+                    <pre><i class="far fa-calendar"></i><h3 style="color:lightblue;">2016/2017</h3></pre><br/>
+                    <pre><i class="fas fa-map-marker-alt"></i><h3 style="color: lightblue;"><a target="_blank" href="" class="formationsLinks">TiziOuzou - AlGERIA</a></h3></pre>
                 </div>
                 <div class="card">
                     <div class="box">
                         <div class="text">Master in Hypermedia Technologies</div>
                     </div>
-                    <pre><i class="fas fa-university"></i><h3 style="color: lightblue;">Paris8 university</h3></pre><br/>
+                    <pre><i class="fas fa-university"></i><h3 style="color: lightblue;"><a target="_blank" href="" class="formationsLinks">Paris8 university</a></h3></pre><br/>
                     <pre><i class="far fa-calendar"></i><h3 style="color:lightblue;">2020/2021</h3></pre><br/>
-                    <pre><i class="fas fa-map-marker-alt"></i><h3 style="color:lightblue;">Paris - FRANCE</h3></pre>
+                    <pre><i class="fas fa-map-marker-alt"></i><h3 style="color:lightblue;"><a target="_blank" href="" class="formationsLinks">Paris - FRANCE</a></h3></pre>
                 </div>
                 <div class="card">
                     <div class="box">
                         <div class="text">Master in Information Systems Engineering</div>
                     </div>
-                    <pre><i class="fas fa-university"></i><h3 style="color: lightblue;">Mouloud mammeri university</h3></pre><br/>
+                    <pre><i class="fas fa-university"></i><h3 style="color: lightblue;"><a target="_blank" href="" class="formationsLinks">Mouloud mammeri university</a></h3></pre><br/>
                     <pre><i class="far fa-calendar"></i><h3 style="color: lightblue;">2020/2021</h3></pre><br/>
-                    <pre><i class="fas fa-map-marker-alt"></i><h3 style="color: lightblue;">TiziOuzou - AlGERIA</h3></pre>
+                    <pre><i class="fas fa-map-marker-alt"></i><h3 style="color: lightblue;"><a target="_blank" href="" class="formationsLinks">TiziOuzou - AlGERIA</a></h3></pre>
                 </div>
                 </div>
         </div>
@@ -237,7 +237,7 @@
     <!-- contact section start -->
     <section class="contact" id="contact">
         <div class="max-width">
-            <h2 class="title">Contact me</h2>
+            <h2 class="title">Contact</h2>
             <div class="contact-content">
                 <div class="column left">
                     <div class="icons">
