--- a/salim.html
+++ b/salim.html
@@ -35,8 +35,9 @@
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
                 <li><a href="#formations" class="menu-btn">Formations</a></li>
-                <li><a href="#skills" class="menu-btn">Skills</a></li>
                 <li><a href="#domaines" class="menu-btn">Domaines</a></li>
+                <li><a href="#skills" class="menu-btn">Skills</a></li>
+                <li><a href="#presence" class="menu-btn">My_presence</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
             <div class="menu-btn">
@@ -110,7 +111,42 @@
         </div>
         </div>
     </section>
-
+ <!-- teams section start -->
+ <section class="teams" id="domaines">
+    <div class="max-width">
+        <h2 class="title">Domaines</h2>
+        <div class="carousel owl-carousel">
+            <div class="card">
+                <div class="box">
+                    <img src="images/web.jpg" alt="">
+                    <div class="text">Web development</div>
+                    <a target="_blank" href="https://www.w3schools.com/whatis/" class="link">For more information on web development click here.</a>
+                </div>
+            </div>
+            <div class="card">
+                <div class="box">
+                    <img src="images/da.jpg" alt="">
+                    <div class="text">Data analysis</div>
+                    <a target="_blank" href="https://www.w3schools.in/python-data-science/data-analysis/" class="link">For more information on data analysis click here.</a>
+                </div>
+            </div>   
+            <div class="card">
+                <div class="box">
+                    <img src="images/blockchain.jpg" alt="">
+                    <div class="text">Blockchain</div>
+                    <a target="_blank" href="https://w3points.com/blockchain-introduction/" class="link">For more information on blockchain click here.</a>
+                </div>
+            </div> 
+            <div class="card">
+                <div class="box">
+                    <img src="images/iot.jpg" alt="">
+                    <div class="text">Internet of things</div>
+                    <a target="_blank" href="https://www.tutorialspoint.com/internet_of_things/index.htm" class="link">For more information on internet of things click here.</a>
+                </div>
+            </div>          
+        </div>
+    </div>
+</section>
     <!-- skills section start -->
     <section class="skills" id="skills">
         <div class="max-width">
@@ -196,44 +232,49 @@
             </div>
         </div>
     </section>
-
-    <!-- teams section start -->
-    <section class="teams" id="domaines">
-        <div class="max-width">
-            <h2 class="title">Domaines</h2>
-            <div class="carousel owl-carousel">
-                <div class="card">
-                    <div class="box">
-                        <img src="images/web.jpg" alt="">
-                        <div class="text">Web development</div>
-                        <a target="_blank" href="https://www.w3schools.com/whatis/" class="link">For more information on web development click here.</a>
-                    </div>
+<!-- teams section start -->
+<section class="teams" id="presence">
+    <div class="max-width">
+        <h2 class="title">My presence on internet</h2>
+        <div class="carousel owl-carousel">
+            <div class="card">
+                <div class="box">
+                    <i class="fab fa-github" id="icon"></i>
+                    <div class="text">Github</div>
+                    <a target="_blank" href="https://github.com/salim499" class="link">Link to my github account.</a>
                 </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="images/da.jpg" alt="">
-                        <div class="text">Data analysis</div>
-                        <a target="_blank" href="https://www.w3schools.in/python-data-science/data-analysis/" class="link">For more information on data analysis click here.</a>
-                    </div>
-                </div>   
-                <div class="card">
-                    <div class="box">
-                        <img src="images/blockchain.jpg" alt="">
-                        <div class="text">Blockchain</div>
-                        <a target="_blank" href="https://w3points.com/blockchain-introduction/" class="link">For more information on blockchain click here.</a>
-                    </div>
-                </div> 
-                <div class="card">
-                    <div class="box">
-                        <img src="images/iot.jpg" alt="">
-                        <div class="text">Internet of things</div>
-                        <a target="_blank" href="https://www.tutorialspoint.com/internet_of_things/index.htm" class="link">For more information on internet of things click here.</a>
-                    </div>
-                </div>          
             </div>
+            <div class="card">
+                <div class="box">
+                    <i class="fab fa-linkedin" id="icon"></i>
+                    <div class="text">Linkedin</div>
+                    <a target="_blank" href="https://www.linkedin.com/in/salim-hassouna-609864178/" class="link">Link to my linkedin account.</a>
+                </div>
+            </div>   
+            <div class="card">
+                <div class="box">
+                    <i class="fab fa-facebook" id="icon"></i>
+                    <div class="text">facebook</div>
+                    <a target="_blank" href="https://www.facebook.com/salim.hassouna" class="link">Link to my linkedin account.</a>
+                </div>
+            </div> 
+            <div class="card">
+                <div class="box">
+                    <i class="fab fa-instagram" id="icon"></i>
+                    <div class="text">Instagram</div>
+                    <a target="_blank" href="https://www.instagram.com/salimhassouna/" class="link">Link to my instagram account.</a>
+                </div>
+            </div>  
+            <div class="card">
+                <div class="box">
+                    <i class="fab fa-discord" id="icon"></i>
+                    <div class="text">Discord</div>
+                    <a target="_blank" href="https://www.discord.com" class="link">SALIM HASSOUNA#7040.</a>
+                </div>
+            </div>          
         </div>
-    </section>
-
+    </div>
+</section>   
     <!-- contact section start -->
     <section class="contact" id="contact">
         <div class="max-width">
