--- a/salim.html
+++ b/salim.html
@@ -6,7 +6,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Portfolio Website</title>
+    <title>Salim Hassouna Website</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -353,6 +353,9 @@
                 });
         }
     </script>
+    <footer>
+        <span>------------------------------------------------------------------</span>
+    </footer>
 </body>
 
 </html>
